create index.html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
  </head>
  <body>
-    <h1>website hosted on github
+    <h1>website hosted on github i am Big_Champ
     </h1>
  </body>
  </html>
